# KCU

./: README.md
apps/backend/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  start.sh
apps/backend/alembic/: env.py  script.py.mako
apps/backend/alembic/versions/: 0001_create_core_tables.py  0002_add_percentile_baselines.py  0003_add_watchlist_table.py
apps/backend/app/: main.py
apps/backend/app/adapters/: discord.py  massive.py  massive_ws.py  polygon.py
apps/backend/app/api/: __init__.py  admin.py  alerts.py  debug.py  health.py  positions.py  snapshots.py  tickers.py  what_if.py
apps/backend/app/core/: errors.py  logging.py  security.py  settings.py
apps/backend/app/db/: models.py  models_watchlist.py  session.py
apps/backend/app/domain/: __init__.py  contract_picker.py  options_health.py  regimes.py  templates.py  types.py  what_if.py
apps/backend/app/domain/features/: __init__.py  levels_cluster.py  (+6 more)
apps/backend/app/services/: __init__.py  baselines.py  data_cache.py  ingest.py  realtime_engine.py  rings.py  snapshotter.py  state_machine.py  state_store.py  tile_engine.py  timing.py  tp_manager.py  watchlist.py
apps/backend/app/workers/: baselines.py  celery_app.py  tasks.py
apps/backend/app/ws/: manager.py
apps/backend/tests/: test_alerts_api.py  test_contract_picker.py  test_health.py  test_option_buckets.py  test_options_health.py  test_probability_math.py  test_realtime_metrics.py  test_regime_switch.py  test_snapshots_api.py  test_tile_payload.py  test_tp_manager.py  test_watchlist_api.py  test_what_if.py
(+46 files in other folders)
