[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kcu-backend"
version = "0.1.0"
description = "KCU LTP Probabilistic Admin Copilot backend"
authors = [{name = "KCU", email = "ops@kcu.local"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.23",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "httpx[http2]>=0.25",
    "structlog>=24.1",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pandas>=2.2",
    "orjson>=3.9",
    "python-dateutil>=2.8",
    "werkzeug>=3.0",
    "aiofiles>=23.2",
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "httpx>=0.25",
    "anyio>=4.2",
    "python-multipart>=0.0.9",
    "uuid6>=2024.1.12"
]

[project.optional-dependencies]
test = ["coverage", "pytest-cov"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q --maxfail=1"

[tool.coverage.run]
source = ["app/domain", "app/services"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
